gifts done and most of shop by category

--- a/index.html
+++ b/index.html
@@ -485,9 +485,398 @@
                 <!-- gifts wrapper -->
                 <div class="giftsWrapper">
 
-                    
+                    <!-- gifts header -->
+                    <div class="giftsHeader">
+                        Gifts for Dad
+                    </div>
+
+                    <!-- gifts container -->
+                    <div class="giftsContainer">
+
+                        <!-- gift cell -->
+                        <div class="giftCell">
+
+                            <!-- gift cell top -->
+                            <div class="giftCellTop">
+                                <img src="//images.ctfassets.net/7rldri896b2a/4A5S4BDWMAEGgqlBqmzBN1/6f1d5528b7beb6c8a37883ee95a0a195/vn1.png" alt="" class="giftCellTopImg">
+                            </div>
+
+                            <!-- gift cell bottom -->
+                            <div class="giftCellBottom">
+                                Tools
+                            </div>
+
+                        <!-- end gift cell -->
+                        </div>
+
+                        <!-- gift cell -->
+                        <div class="giftCell">
+
+                            <!-- gift cell top -->
+                            <div class="giftCellTop">
+                                <img src="//images.ctfassets.net/7rldri896b2a/3Xu4xm4uOh4bK8VDvEudw7/153af7a865cbe236463d8f00f2600cca/vn-2.png" alt="" class="giftCellTopImg">
+                            </div>
+
+                            <!-- gift cell bottom -->
+                            <div class="giftCellBottom">
+                                Outdoor Power Equipment
+                            </div>
+
+                        <!-- end gift cell -->
+                        </div>
+
+                        <!-- gift cell -->
+                        <div class="giftCell">
+
+                            <!-- gift cell top -->
+                            <div class="giftCellTop">
+                                <img src="//images.ctfassets.net/7rldri896b2a/4AssY8STQB38VI8lcrzvkZ/a9d5e9638c743901ae9462ba174aef54/vn-3.png" alt="" class="giftCellTopImg">
+                            </div>
+
+                            <!-- gift cell bottom -->
+                            <div class="giftCellBottom">
+                                Grills
+                            </div>
+
+                        <!-- end gift cell -->
+                        </div>
+
+                        <!-- gift cell -->
+                        <div class="giftCell">
+
+                            <!-- gift cell top -->
+                            <div class="giftCellTop">
+                                <img src="//images.ctfassets.net/7rldri896b2a/30xvSNObDJqk8jf4uCDVjp/cec44ff46b828d8231efd26be25d1c68/vn-4.png" alt="" class="giftCellTopImg">
+                            </div>
+
+                            <!-- gift cell bottom -->
+                            <div class="giftCellBottom">
+                                Smart Home
+                            </div>
+
+                        <!-- end gift cell -->
+                        </div>
+
+                        <!-- gift cell -->
+                        <div class="giftCell">
+
+                            <!-- gift cell top -->
+                            <div class="giftCellTop">
+                                <img src="//images.ctfassets.net/7rldri896b2a/3gdY4UbanlNUErNzjFoUUr/2c62f59232465f81e7f7c3b66f107152/vis-5.png" alt="" class="giftCellTopImg">
+                            </div>
+
+                            <!-- gift cell bottom -->
+                            <div class="giftCellBottom">
+                                Paint
+                            </div>
+
+                        <!-- end gift cell -->
+                        </div>
+
+                        <!-- gift cell -->
+                        <div class="giftCell">
+
+                            <!-- gift cell top -->
+                            <div class="giftCellTop">
+                                <img src="//images.ctfassets.net/7rldri896b2a/7fQMti2QJtVzrRhGyClESZ/19ea2c23f57154b58a32bada9942264a/vn6.png" alt="" class="giftCellTopImg">
+                            </div>
+
+                            <!-- gift cell bottom -->
+                            <div class="giftCellBottom">
+                                Storage
+                            </div>
+
+                        <!-- end gift cell -->
+                        </div>
+
+                    <!-- end gifts container -->
+                    </div>
 
                 <!-- end gifts wrapper -->
+                </div>
+
+                <!-- category wrapper -->
+                <div class="categoryWrapper">
+
+                    <div class="categoryHeader">
+
+                        <div class="categoryHeaderText">
+                            Shop By Category
+                        </div>
+
+                    </div>
+
+                    <!-- category row -->
+                    <div class="categoryRow">
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/6HJ9kQgqZpiVnHjvcBmN0Q/74f1b6215621a961fb92e98e3632d68d/fathersday-sbc.svg" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+                                Father's Day Savings
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/6Gr9Ru4lOd1iTP32vlGEbh/b04979fa4f12ceb846ca4e484ab93cd3/hp-sbc-appliances.svg" alt="" class="categoryImg">
+                            </div>
+                            
+                            <div class="categoryText">
+                                Appliances
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/HrBPRwD99561CDruowFXc/7ca53f693e6dfe9edd3b4fb21fbea6fb/hp-sbc-bath-faucets.svg" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+                                Bath & Faucets
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/kR4CltmJ0kXv4V1b7mxlk/ff3ab0811bf096ed3316a6e06f588985/hp-sbc-building-materials.svg" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+                                Building Materials
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/5ZUQWG4zreD8UnmgAmxx4v/c267ab908c070f2f418fc64fd2ed4a05/hp-sbc-decor-furniture.svg" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+                                Decor & Furniture
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>  
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/7KblIOWidIclcMQUW16BqL/187437f99503036a6aa73a3f3456e18e/hp-sbc-doors-windows.svg" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+                                Doors & Windows
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                    <!-- end category row -->
+                    </div>
+
+                    <!-- category row -->
+                    <div class="categoryRow">
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/7JHzWuMRKuPWMAFLnn8JVC/82d63ee6e8817533adcd030545bb2a4b/hp-sbc-electrical.svg" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+                                Electrical
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/1ViWChlbaoKlp58UIjAuwX/88d00fbf0735d2647ebf3888f4f37028/hp-sbc-flooring-area-rugs.svg" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+                                Flooring & Area Rugs
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/5KzoRfLFKhwlh34nBYfJiI/8edfa416a754dcfaf020b04e46afe336/hp-sbc-hardware.svg" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+                                Hardware
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/12dLpMx5xEXoXPLYtYw8LF/13d3180c8b8adf435b25319f514fd906/hp-sbc-heating-cooling.svg" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+                                Heating & Cooling
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/7tE1MZQJGM8FBBSJ39TYiZ/998c16bae92be1deefa4dd23c6899839/hp-sbc-kitchen.svg" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+                                Kitchen
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/6ws31LTOeVhdoHSUBeG8np/599cf02267ca7a7e2aaad6d61100fae6/hp-sbc-lawn-garden.svg" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+                                Lawn & Garden
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                    <!-- end category row -->
+                    </div>
+
+                    <!-- categoryn row -->
+                    <div class="categoryRow">
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="//images.ctfassets.net/7rldri896b2a/7Ic0OBtIg3CUTR42KGkrK4/b58f87617b260df587d6c39839440fa5/hp-sbc-lighting-ceiling-fans.svg" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+                                Lighting & Ceiling Fans
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                        <!-- category cell -->
+                        <div class="categoryCell">
+
+                            <div class="categoryPic">
+                                <img src="" alt="" class="categoryImg">
+                            </div>
+
+                            <div class="categoryText">
+
+                            </div>
+
+                        <!-- end category cell -->
+                        </div>
+
+                    <!-- end category row -->
+                    </div>
+
+                <!-- end category wrapper -->
                 </div>
 
             <!-- end main body content -->
